# kinect_bridge_ubuntu

./: CMakeLists.txt  README.md  package.xml
exe/generic_tests/: CMakeLists.txt
exe/kinect_client/: CMakeLists.txt  kinect_client.cpp
include/messages/: kinect_messages.h
msg/: KinectColorImage.msg  KinectDepthImage.msg  KinectDepthImageInfo.msg  KinectFace.msg  KinectFaces.msg  KinectHDFace.msg  KinectHDFaces.msg  KinectJoint.msg
src/atomics/: CMakeLists.txt
src/kinect_common/: CMakeLists.txt
src/messages/: CMakeLists.txt
